Update proxy.yaml with additional domains
Added new domains to the payload list in proxy.yaml

--- a/rule-set/proxy.yaml
+++ b/rule-set/proxy.yaml
@@ -1,6 +1,16 @@
 payload:
-  - '*.glitch.*'
   - '*.jetbrains.*'
   - '*.postman.*'
   - '+.apache.org'
   - '+.devin.xin'
+  - '+.4kvm.tv'
+  - '+.imdb.*'
+  - '+.dl.*'
+  - 'cspt.top'
+  - 'pttime.org'
+  - 'pandapt.net'
+  - 'pt.btschool.club'
+  - 'carpt.net'
+  - 'ptchina.org'
+  - 'lemonhd.net'
+  - '+.cloudflare.com'
