--- a/rule-set/global-override.yaml
+++ b/rule-set/global-override.yaml
@@ -102,14 +102,14 @@ rule-providers:
     type: http
     behavior: domain
     url: "https://guoyin-wen.github.io/resources/rule-set/proxy.yaml"
-    path: ./ruleset/proxy-glitch.yaml
+    path: ./ruleset/proxy-custom.yaml
     interval: 86400
 
   direct-custom:
     type: http
     behavior: domain
     url: "https://guoyin-wen.github.io/resources/rule-set/direct.yaml"
-    path: ./ruleset/direct-glitch.yaml
+    path: ./ruleset/direct-custom.yaml
     interval: 86400
 # rule-set:gfw,rule-set:tld-not-cn,rule-set:proxy-custom
 rules:
