--- a/rule-set/global-override.yaml
+++ b/rule-set/global-override.yaml
@@ -1,4 +1,3 @@
-# Profile Enhancement Merge Template for Clash Verge
 proxy-providers:
   free-cloud:
     type: http
@@ -8,16 +7,32 @@ proxy-providers:
     url: https://995942874.online.alipaycctv.cn/ktff/m3u8/api/video?token=e1da8d4fe6889d6c992a586c2d365467
     # 自动更新时间 21600(秒) / 3600 = 6小时
     interval: 21600
-    # 节点名称前缀 p1
     override:
-      additional-prefix: "fc |"
+      additional-suffix: " | Free"
   yi-yuan:
     type: http
     path: ./proxy_provider/yi-yuan.yaml
     url: https://s1.byte77.com/api/v1/client/subscribe?token=e59b1d2921f17f82a2d683036a2cc99f
     interval: 21600
+    exclude-filter: "一元.com`邀请新用户`yiyuanjichang"
     override:
-      additional-prefix: "yy |"
+      additional-suffix: " | 一元"
+
+proxy-groups:
+  - name: PROXY
+    type: select
+    proxies: [DIRECT,自动选择]
+    url: "https://www.gstatic.com/generate_204"
+    interval: 300
+    max-failed-times: 5
+    include-all: true
+  - name: 自动选择
+    type: url-test
+    proxies: [DIRECT]
+    url: "https://www.gstatic.com/generate_204"
+    interval: 300
+    max-failed-times: 5
+    include-all: true
 
 profile:
   store-selected: true
