--- a/rule-set/global-override.yaml
+++ b/rule-set/global-override.yaml
@@ -33,6 +33,13 @@ proxy-groups:
     interval: 300
     max-failed-times: 5
     include-all: true
+  - name: 故障转移
+    type: fallback
+    proxies: [DIRECT]
+    url: "https://www.gstatic.com/generate_204"
+    interval: 300
+    max-failed-times: 5
+    include-all: true
 
 profile:
   store-selected: true
