--- a/rule-set/global-override.yaml
+++ b/rule-set/global-override.yaml
@@ -14,6 +14,24 @@ proxy-groups:
     interval: 300
     max-failed-times: 5
     include-all: true
+  - name: 自动日本
+    type: url-test
+    proxies: [DIRECT]
+    url: "https://www.gstatic.com/generate_204"
+    filter: "日本"
+    exclude-filter: "20倍"
+    interval: 300
+    max-failed-times: 5
+    include-all: true
+  - name: 自动印尼
+    type: url-test
+    proxies: [DIRECT]
+    url: "https://www.gstatic.com/generate_204"
+    filter: "印度尼西亚"
+    exclude-filter: "20倍"
+    interval: 300
+    max-failed-times: 5
+    include-all: true
   - name: 故障转移
     type: fallback
     proxies: [DIRECT]
