--- a/rule-set/proxy.yaml
+++ b/rule-set/proxy.yaml
@@ -20,3 +20,6 @@ payload:
   - '+.graf.*'
   - '+.qdrant.tech'
   - '+.notion.so'
+  - '+.openai.com'
+  - '+.viewsonicglobal.com'
+  - '+.bento.me'
